# rtic-async-shared-resource

./: Cargo.toml  README.md
src/: async_option.rs  lib.rs  mock_mutex.rs  value_container.rs
src/async_option/: inner.rs  wait_for_value_future.rs
src/value_container/: change_future.rs  inner.rs  set_value_future.rs
