[package]
name = "rtic-send-share-value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtic-sync = "1"

[dev-dependencies]
rtic-core = "1"
async-std = { version = "1.10.0", features = ["attributes", "unstable"] }
critical-section = { version = "1.1", features = ["std"]}

